--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=\, initial-scale=1.0" />
+    <!--Favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <!--BootStrap 5 CDN-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -17,9 +25,147 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row justify-content-end main-row vh-100">
+      <a href="/">
+        <img src="assets/chris-logo.JPG" class="logo d-none d-lg-block" />
+      </a>
+      <div class="row flex-row-reverse">
+        <div class="col-lg-2">
+          <!--Mobile logo-->
+          <div class="col-1 d-lg-none small-logo-container text-center">
+            <a href="/">
+              <img src="./assets/chris-icon.png" class="small-logo" />
+            </a>
+          </div>
+          <div class="flex-shrink-0 p-3 bg-white">
+            <div class="row g-1 justify-content-end mx-0">
+              <!--Start of button one-->
+              <div class="col-3 col-lg-3">
+                <button
+                  class="btn btn-toggle align-items-center collapsed nav-size border-dark border-top-0 border-start-0 border-end-0 border-3 rounded-0"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#home-collapse"
+                  aria-expanded="false"
+                >
+                  WORK
+                </button>
+                <div class="collapse" id="home-collapse">
+                  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                    <li>
+                      <a href="#" class="link-dark rounded nav-size"
+                        >Overview</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#" class="link-dark rounded nav-size">Updates</a>
+                    </li>
+                    <li>
+                      <a href="#" class="link-dark rounded nav-size">Reports</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <!--End of button one-->
+              <!--Start of button two-->
+              <div class="col-3 col-lg-3">
+                <button
+                  class="btn btn-toggle align-items-center rounded collapsed nav-size border-dark border-top-0 border-start-0 border-end-0 border-3 rounded-0"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#dashboard-collapse"
+                  aria-expanded="false"
+                >
+                  NEWS
+                </button>
+                <div class="collapse" id="dashboard-collapse">
+                  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                    <li>
+                      <a href="#" class="link-dark rounded nav-size"
+                        >Overview</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#" class="link-dark rounded nav-size">Weekly</a>
+                    </li>
+                    <li>
+                      <a href="#" class="link-dark rounded nav-size">Monthly</a>
+                    </li>
+                    <li>
+                      <a href="#" class="link-dark rounded nav-size"
+                        >Annually</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <!--End of Button two-->
+              <!--Start of Button three-->
+              <div class="col-3 col-lg-3">
+                <button
+                  class="btn btn-toggle align-items-center rounded collapsed nav-size border-dark border-top-0 border-start-0 border-end-0 border-3 rounded-0"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#orders-collapse"
+                  aria-expanded="false"
+                >
+                  INFO
+                </button>
+                <div class="collapse" id="orders-collapse">
+                  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                    <li>
+                      <a href="#" class="link-dark rounded nav-size">New</a>
+                    </li>
+                    <li>
+                      <a href="#" class="link-dark rounded nav-size"
+                        >Processed</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#" class="link-dark rounded nav-size">Shipped</a>
+                    </li>
+                    <li>
+                      <a href="#" class="link-dark rounded nav-size"
+                        >Returned</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <!--End of Button three-->
+              <!--Start of Button four-->
+              <div class="col-2 col-lg-3">
+                <button
+                  class="btn btn-toggle align-items-center rounded collapsed nav-size border-dark border-top-0 border-start-0 border-end-0 border-3 rounded-0"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#account-collapse"
+                  aria-expanded="false"
+                >
+                  SHOP
+                </button>
+                <div class="collapse" id="account-collapse">
+                  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                    <li>
+                      <a href="#" class="link-dark rounded nav-size">New...</a>
+                    </li>
+                    <li>
+                      <a href="#" class="link-dark rounded nav-size">Profile</a>
+                    </li>
+                    <li>
+                      <a href="#" class="link-dark rounded nav-size"
+                        >Settings</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#" class="link-dark rounded nav-size"
+                        >Sign out</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <!--End of Button Four-->
+            </div>
+          </div>
+        </div>
         <!--Carousel-->
-        <div class="col-md-10">
+        <div class="col-lg-10">
           <div
             id="carouselExampleSlidesOnly"
             class="carousel slide"
@@ -51,98 +197,6 @@
           </div>
         </div>
         <!--Side Bar-->
-        <div class="col-md-2">
-          <div class="flex-shrink-0 p-3 bg-white" style="width: 280px">
-            <ul class="list-unstyled ps-0">
-              <li class="mb-1">
-                <button
-                  class="btn btn-toggle align-items-center rounded collapsed"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#home-collapse"
-                  aria-expanded="false"
-                >
-                  Home
-                </button>
-                <div class="collapse" id="home-collapse">
-                  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li>
-                      <a href="#" class="link-dark rounded">Overview</a>
-                    </li>
-                    <li><a href="#" class="link-dark rounded">Updates</a></li>
-                    <li><a href="#" class="link-dark rounded">Reports</a></li>
-                  </ul>
-                </div>
-              </li>
-              <li class="mb-1">
-                <button
-                  class="btn btn-toggle align-items-center rounded collapsed"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#dashboard-collapse"
-                  aria-expanded="false"
-                >
-                  Dashboard
-                </button>
-                <div class="collapse" id="dashboard-collapse">
-                  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li>
-                      <a href="#" class="link-dark rounded">Overview</a>
-                    </li>
-                    <li><a href="#" class="link-dark rounded">Weekly</a></li>
-                    <li><a href="#" class="link-dark rounded">Monthly</a></li>
-                    <li>
-                      <a href="#" class="link-dark rounded">Annually</a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="mb-1">
-                <button
-                  class="btn btn-toggle align-items-center rounded collapsed"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#orders-collapse"
-                  aria-expanded="false"
-                >
-                  Orders
-                </button>
-                <div class="collapse" id="orders-collapse">
-                  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a href="#" class="link-dark rounded">New</a></li>
-                    <li>
-                      <a href="#" class="link-dark rounded">Processed</a>
-                    </li>
-                    <li><a href="#" class="link-dark rounded">Shipped</a></li>
-                    <li>
-                      <a href="#" class="link-dark rounded">Returned</a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="border-top my-3"></li>
-              <li class="mb-1">
-                <button
-                  class="btn btn-toggle align-items-center rounded collapsed"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#account-collapse"
-                  aria-expanded="false"
-                >
-                  Account
-                </button>
-                <div class="collapse" id="account-collapse">
-                  <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a href="#" class="link-dark rounded">New...</a></li>
-                    <li><a href="#" class="link-dark rounded">Profile</a></li>
-                    <li>
-                      <a href="#" class="link-dark rounded">Settings</a>
-                    </li>
-                    <li>
-                      <a href="#" class="link-dark rounded">Sign out</a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
       </div>
     </div>
 
