Added info page

--- a/pages/info.html
+++ b/pages/info.html
@@ -20,21 +20,23 @@
       crossorigin="anonymous"
     />
     <!--Custom Styles-->
-    <link href="./custom.css" rel="stylesheet" />
-    <title>CHRISTOPHER</title>
+    <link href="../custom.css" rel="stylesheet" />
+    <title>CHRISTOPHER BEROES-HAIGIS</title>
   </head>
   <body>
-    <!--Side Bar-->
     <div class="container-fluid">
       <a href="/">
-        <img src="./assets/chris-logo.JPG" class="logo d-none d-lg-block" />
+        <img
+          src="../assets/chris-logo.JPG"
+          class="info-logo d-none d-lg-block"
+        />
       </a>
       <div class="row flex-row-reverse">
         <div class="col-lg-2">
           <!--Mobile logo-->
-          <div class="col-1 d-lg-none small-logo-container text-center">
+          <div class="col-1 d-lg-none info-small-logo-container text-center">
             <a href="/">
-              <img src="./assets/chris-icon.png" class="small-logo" />
+              <img src="../assets/chris-icon.png" class="info-small-logo" />
             </a>
           </div>
           <div class="flex-shrink-0 p-3 bg-white">
@@ -42,7 +44,7 @@
               <!--Start of button one-->
               <div class="col-3 col-lg-3">
                 <a
-                  href="#"
+                  href="../index.html"
                   class="btn btn-toggle align-items-center rounded collapsed nav-size border-dark border-top-0 border-start-0 border-end-0 border-3 rounded-0"
                   >WORK</a
                 >
@@ -60,7 +62,7 @@
               <!--Start of Button three-->
               <div class="col-3 col-lg-3">
                 <a
-                  href="./pages/info.html"
+                  href="#"
                   class="btn btn-toggle align-items-center rounded collapsed nav-size border-dark border-top-0 border-start-0 border-end-0 border-3 rounded-0"
                   >INFO</a
                 >
@@ -78,41 +80,47 @@
             </div>
           </div>
         </div>
-        <!--Carousel-->
-        <div class="col-lg-10">
-          <div
-            id="carouselExampleSlidesOnly"
-            class="carousel slide"
-            data-bs-ride="carousel"
-          >
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img
-                  src="./assets/bg-three.jpg"
-                  class="d-block vh-100 vw-100"
-                  alt="..."
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="./assets/bg-four.jpg"
-                  class="d-block vh-100 vw-100"
-                  alt="..."
-                />
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="./assets/bg-three.jpg"
-                  class="d-block vh-100 vw-100"
-                  alt="..."
-                />
-              </div>
-            </div>
-          </div>
+        <!--Left Sidebar-->
+      </div>
+      <div class="row">
+        <div class="col-lg-2 my-5">
+          <h1 class="h3">CHRIS BEROES-HAIGIS</h1>
+          <p class="">contact:</p>
+          <p>Social Media:</p>
+          <p>Shop:</p>
+          <p>Classes:</p>
+        </div>
+        <div class="col-lg-8 my-5">
+          <img class="img-fluid" src="../assets/fake-chris.jpg" />
+          <p>
+            YUKO SHIMIZU (清水裕子) is A multi-award-winning Japanese
+            illustrator based in New York City. Yuko is an instructor at The
+            School of Visual Arts and has almost 20 years of experience
+            illustrating. Her work includes multiple disciplines; from pages of
+            The New York Times, TIME, Newsweek, The New Yorker to WIRED, covers
+            for DC Comic, Penguin, and Scholastic, advertising for Apple,
+            Microsoft, Intel, Universal Pictures, SONY, Paramount, MTV, Nike,
+            Hasbro, and Target, to name a few. Additionally, she has
+            collaborated with the Smithsonian Museum, Philadelphia Museum of
+            Art, and Library of Congress. In 2020, collaboration with Artechouse
+            brought her drawings to large-scale interactive experiences. Yuko is
+            a two-time Hugo Award nominee (2019, 2020), has won more than 15
+            medals from the Society of Illustrators since 2004, and was recently
+            awarded the Caldecott Honor (2021), one of the highest awards for
+            picture books, for her work on the children’s book The Cat Man of
+            Aleppo (Penguin, 2020). Yuko was also chosen as one of the “100
+            Japanese People the World Respects (世界が尊敬する日本人１００）” by
+            Newsweek Japan in 2009. FUN FACT: Illustration is actually Yuko’s
+            second career. Although art has always been her passion, she had
+            initially chosen a more practical path of studying advertising and
+            marketing at Waseda University and had a career in corporate PR for
+            11 years before moving to New York to study art for the first time.
+            Yuko graduated with MFA from SVA’s Illustration as Visual Essay
+            Program in 2003 and has been illustrating and teaching since.
+          </p>
         </div>
       </div>
     </div>
-
     <!--BootStrap JS bundle-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
