Added fix to hyperlinks on about page

--- a/pages/info.html
+++ b/pages/info.html
@@ -84,14 +84,31 @@
       </div>
       <div class="row">
         <div class="col-lg-2 my-5">
-          <h1 class="h3">CHRIS BEROES-HAIGIS</h1>
-          <p class="">contact:</p>
-          <p>Social Media:</p>
-          <p>Shop:</p>
-          <p>Classes:</p>
+          <h1 class="h5">CHRIS</h1>
+          <h1 class="h5">BEROES-HAIGIS</h1>
+          <p class="ingo-media-link fw-bold">Social:</p>
+          <p class="info-media-link">
+            <a href="https://soundcloud.com/chrisberoeshaigis">SoundCloud</a>
+          </p>
+          <p class="info-media-link">
+            <a href="https://www.youtube.com/channel/UCcOsB3p2Rcbrq6HeFQxEdoA"
+              >YouTube</a
+            >
+          </p>
+          <p class="info-media-link">
+            <a href="https://www.instagram.com/chrisberoeshaigis/">Instagram</a>
+          </p>
+          <p class="info-media-link">
+            <a href="https://www.facebook.com/chrisberoeshaigis"> Facebook </a>
+          </p>
+          <p class="info-media-link">
+            <a href="https://twitter.com/BeroesHaigis">Twitter</a>
+          </p>
         </div>
         <div class="col-lg-8 my-5">
-          <img class="img-fluid" src="../assets/fake-chris.jpg" />
+          <div class="col-4">
+            <img class="img-fluid" src="../assets/about-chris.jpg" />
+          </div>
           <p>
             YUKO SHIMIZU (清水裕子) is A multi-award-winning Japanese
             illustrator based in New York City. Yuko is an instructor at The
