--- a/pages/info.html
+++ b/pages/info.html
@@ -25,9 +25,10 @@
   </head>
   <body>
     <div class="container-fluid">
+      <!--desktop logo-->
       <a href="/">
         <img
-          src="../assets/chris-logo.JPG"
+          src="../assets/desktop-logo.png"
           class="info-logo d-none d-lg-block"
         />
       </a>
@@ -36,7 +37,7 @@
           <!--Mobile logo-->
           <div class="col-1 d-lg-none info-small-logo-container text-center">
             <a href="/">
-              <img src="../assets/chris-icon.png" class="info-small-logo" />
+              <img src="../assets/mobile-logo.png" class="info-small-logo" />
             </a>
           </div>
           <div class="flex-shrink-0 p-3 bg-white">
