--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
   </head>
   <body>
     <!--Side Bar-->
-    <div class="container-fluid">
+    <div class="container-fluid border border-top border-3 border-dark ">
       <a href="/">
-        <img src="./assets/chris-logo.JPG" class="logo d-none d-lg-block" />
+        <img src="./assets/desktop-logo.png" class="logo d-none d-lg-block" />
       </a>
       <div class="row flex-row-reverse">
         <div class="col-lg-2">
           <!--Mobile logo-->
           <div class="col-1 d-lg-none small-logo-container text-center">
             <a href="/">
-              <img src="./assets/chris-icon.png" class="small-logo" />
+              <img src="./assets/mobile-logo.png" class="small-logo" />
             </a>
           </div>
           <div class="flex-shrink-0 p-3 bg-white">
@@ -88,24 +88,18 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
-                  src="./assets/bg-three.jpg"
+                  src="./assets/bg-five.png"
                   class="d-block vh-100 vw-100"
                   alt="..."
                 />
               </div>
               <div class="carousel-item">
                 <img
-                  src="./assets/bg-four.jpg"
+                  src="./assets/bg-six.png"
                   class="d-block vh-100 vw-100"
                   alt="..."
                 />
               </div>
-              <div class="carousel-item">
-                <img
-                  src="./assets/bg-three.jpg"
-                  class="d-block vh-100 vw-100"
-                  alt="..."
-                />
               </div>
             </div>
           </div>
